--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,6 +1,8 @@
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  --background: #F7F6F7;
+  --main-orange: #E5840B;
+  --main-green: #0E492B
+
 }
 
 @media (prefers-color-scheme: dark) {
@@ -17,11 +19,7 @@ body {
 }
 
 body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: 'Lato', sans-serif;
 }
 
 * {
