--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,7 +1,10 @@
 :root {
   --background: #F7F6F7;
   --main-orange: #E5840B;
-  --main-green: #0E492B
+  --main-green: #0E492B;
+
+  --orange-rgba:#e5830b;
+
 
 }
 
