--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -3,7 +3,7 @@
   top: 20px;
   left: 2%;
   z-index: 1000;
-  max-width: 80%;
+  max-width: 50%;
   width: 800px;
 }
 
@@ -11,14 +11,18 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  background:rgba(247, 246, 247, 0.69);
+  background:rgba(247, 246, 247, 0.03);
   /* background: rgba(235, 228, 224, 0.57); */
-  backdrop-filter: blur(10px);
+  backdrop-filter: blur(10px);  
   border-radius: 50px;
   padding:8px 35px;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
 
+  /* -webkit-background-clip: text;
+  background-clip: text; */
 }
+
+
 
 .navbar-options{
   display:flex;
@@ -28,9 +32,13 @@
 .nav-button {
   position: relative;
   background: transparent;
+
   border: none;
-  color: rgba(0, 0, 0, 0.77);
+  /* color: rgba(0, 0, 0, 0.77); */
+  color: rgba(178, 209, 177, 0.75);
+
   font-size: 13px;
+  background: inherit;
   font-weight: 500;
   cursor: pointer;
   text-transform: uppercase;
@@ -44,7 +52,7 @@
   bottom: -29px;
   width: 0%;
   height: 2px;
-  background-color: var(--main-orange);
+  background-color: var( --orange-rgba);
   transition: width 0.3s ease;
 }
 
@@ -55,12 +63,12 @@
 
 .nav-button:hover,
 .nav-button.active {
-  color: var(--main-orange);
+  color: #e5830b;
 }
 
 
 /* .nav-button.active {
-  color: var(--main-orange);
+  color: #e5830b;
 }
 
 .nav-button.active::after {
@@ -76,7 +84,7 @@
 }
 .logo p{
 font-size:8px;
-color: rgba(0, 0, 0, 0.77);
+color: rgba(178, 209, 177, 0.75);
 font-weight:500
 }
 
@@ -92,7 +100,7 @@ font-weight:500
 }
 
 .nav-button:hover {
-  color: var(--main-orange);
+  color: #e5830b;
   border:none;
 } */
 
@@ -130,7 +138,7 @@ font-weight:500
   }
   
   .nav-button:hover {
-    color: var(--main-orange)
+    color: #e5830b
   }
   
   .icon-button {
