--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -1,21 +1,23 @@
 .navbar-container {
   position: absolute;
-  top: 20px;
-  left: 2%;
+  /* top: 20px;
+  left: 2%; */
+  /* top: 20px; */
   z-index: 1000;
-  max-width: 50%;
-  width: 800px;
+  /* max-width: 50%; */
+  /* width: 800px; */
+  width:100%
 }
 
 .navbar-content {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  background:rgba(247, 246, 247, 0.03);
+  background:rgba(247, 246, 247, 0.49);
   /* background: rgba(235, 228, 224, 0.57); */
   backdrop-filter: blur(10px);  
-  border-radius: 50px;
-  padding:8px 35px;
+  /* border-radius: 0px 50px 50px 0px ; */
+  padding:15px 35px;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
 
   /* -webkit-background-clip: text;
@@ -35,11 +37,12 @@
 
   border: none;
   /* color: rgba(0, 0, 0, 0.77); */
-  color: rgba(178, 209, 177, 0.75);
+  /* color: rgba(178, 209, 177, 0.75); */
+  color: rgba(18, 19, 18, 0.75);
 
   font-size: 13px;
   background: inherit;
-  font-weight: 500;
+  font-weight: 600;
   cursor: pointer;
   text-transform: uppercase;
   transition: color 0.3s ease;
@@ -63,7 +66,8 @@
 
 .nav-button:hover,
 .nav-button.active {
-  color: #e5830b;
+  /* color: #e5830b; */
+  /* color: var(--main-green) */
 }
 
 
@@ -84,8 +88,8 @@
 }
 .logo p{
 font-size:8px;
-color: rgba(178, 209, 177, 0.75);
-font-weight:500
+color: rgba(18, 19, 18, 0.75);
+font-weight:600
 }
 
 /* .nav-button {
