--- a/src/components/About/aboutStyles.css
+++ b/src/components/About/aboutStyles.css
@@ -11,9 +11,9 @@
   height: 100vh;
   background-color: var(--bg-color);
   position: relative;
-  overflow: hidden;
+  overflow: hidden;  
+    padding: 160px 5% 100px;
   align-content:center;
-  margin-top:150px 5%;
   margin: auto;
 }
 
