--- a/src/components/Beneficios/beneficios.css
+++ b/src/components/Beneficios/beneficios.css
@@ -8,7 +8,7 @@
 }
 
 .beneficios-section {
-  background-color: f5f5f5;
+  background-color: #f5f5f5;
   height: 100vh;
   position: relative;
   text-align: center;
