--- a/src/components/Proyectos/proyectos.css
+++ b/src/components/Proyectos/proyectos.css
@@ -1,5 +1,6 @@
 /* styles/Proyectos.css */
 .proyectos-section {
+  /* background-color: #ededed; */
   background-color: #0a0a0a;
   padding: 150px 5% 100px;
   position: relative;
