--- a/src/components/About/aboutStyles.css
+++ b/src/components/About/aboutStyles.css
@@ -3,18 +3,17 @@
   --primary-color: #ff7d00;
   --secondary-color: #ffffff;
   --text-color: #333333;
-  --bg-color: #f5f5f5;
+  --bg-color: #ededed;
   --dark-bg: #0a0a0a;
 }
 
 .about-section {
-  height: 100vh;
+  height: 100%;
   background-color: var(--bg-color);
   position: relative;
   overflow: hidden;  
     padding: 160px 5% 100px;
   align-content:center;
-  margin: auto;
 }
 
 .section-header {
@@ -102,7 +101,7 @@
 }
 
 .image-container {
-  flex: 1;
+  /* flex: 1; */
   position: relative;
   overflow: hidden;
   border-radius: 8px;
@@ -119,7 +118,6 @@
 }
 
 .about-img {
-  width: 100%;
   height: 100%;
   object-fit: cover;
   transition: transform 0.6s cubic-bezier(0.16, 1, 0.3, 1);
