--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -15,7 +15,7 @@
   justify-content: space-between;
   background:rgba(247, 246, 247, 0.49);
   /* background: rgba(235, 228, 224, 0.57); */
-  backdrop-filter: blur(10px);  
+  /* backdrop-filter: blur(10px);   */
   /* border-radius: 0px 50px 50px 0px ; */
   padding:15px 35px;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
