--- a/src/components/Navbar2/navbar2.css
+++ b/src/components/Navbar2/navbar2.css
@@ -7,7 +7,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 1.5rem 5%;
+  padding: 20px 40px;
   position: fixed;
   width: 100%;
   z-index: 1000;
@@ -17,13 +17,13 @@
 .logo {
   color: white;
   font-weight: 600;
-  font-size: 1.8rem;
-  letter-spacing: 2px;
+  font-size: 28px;
+  letter-spacing: 4px;
   text-align:center
 }
 
 .logo span {
-  font-size: 1rem;
+  font-size: 28px;
   letter-spacing: 4px;
 }
 
@@ -36,7 +36,7 @@ nav ul {
 nav ul li a {
   text-decoration: none;
   color: white;
-  font-size: 0.9rem;
+  font-size: 15px;
   font-weight: 500;
   letter-spacing: 1px;
   position: relative;
