--- a/src/components/PorqueElegirnos/porqueElegirnos.module.css
+++ b/src/components/PorqueElegirnos/porqueElegirnos.module.css
@@ -2,7 +2,6 @@
 .mainContainer {
   height: auto;
   display: flex;
-  padding-top: 80px;
   align-content: center;
   overflow: hidden;
   background: var(--bg-color);
@@ -36,7 +35,7 @@
 
 .contentContainer {
   width: 100%;
-  height: 100vh;
+  height: auto;
   margin: auto;
   align-content: center;
   padding-inline: 15px;
@@ -185,28 +184,51 @@
 @media (max-width: 700px) {
   .mainContainer {
     height: auto;
+    padding: 20px 0;
+    overflow-x: hidden;
   }
 
-  .modelCardContainer {
-    flex-direction: column;
-    gap: 30px;
+  .modelsWrapper {
+    display: block;
   }
-  
-  .contentContainer {
-    margin-top: 50px;
+
+  .swiper-backface-hidden .swiper-slide {
+    width: auto !important; 
+  }
+
+  .mobileCard {
+    width: calc(100% - 40px);
+    background-color: #fff;
+    border-radius: 10px;
+    overflow: hidden;
+    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+  }
+
+  .imagesContainer {
+    height:300px;
+    width: 100%;
+    border: none;
+  }
+
+  .modelImage {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
   }
 
   .descriptionContainer {
-    width: auto;
-    height: 280px;
+    width: 100%;
+    height: 400px;
+    border: none;
   }
 
   .contentTitle {
     font-size: 18px;
-    padding-bottom: 30px;
+    padding-bottom: 50px
   }
 
-  .modelImage {
-    filter: none;
+  .houseDescription {
+    font-size: 20px;
+    line-height: 140%;
   }
 }
