--- a/src/components/Contacto/contacto.css
+++ b/src/components/Contacto/contacto.css
@@ -214,7 +214,22 @@
   }
 }
 
+.divider-line {
+  display: none;
+}
+
+
+
 @media (max-width: 768px) {
+
+  .divider-line {
+    display: block;
+    width: 100%;
+    height: 4px;
+    background-color: var(--primary);
+  }
+
+
   .form-row {
     grid-template-columns: 1fr;
     gap: 0;
@@ -225,6 +240,7 @@
       }
 
   .contact-form-container {
+    border-top: 1px solid var(--primary);
     padding: 2rem;
   }
 }
