--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -15,6 +15,20 @@
   }
 }
 
+.whatsapp-button {
+  position: fixed;
+  bottom: 60px;
+  right: 30px;
+  z-index: 1000;
+}
+
+@media (max-width: 768px) {
+  .whatsapp-button {
+    bottom: 30px;
+  }
+}
+
+
 html,
 body {
   max-width: 100vw;
