--- a/src/components/Home/Home2/home2styles.css
+++ b/src/components/Home/Home2/home2styles.css
@@ -20,7 +20,7 @@
 }
 
 .contenedor-home {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.7)), url("/background.jpeg");
+  background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.7)), url("/background.webp");
   background-attachment: fixed;
   background-size: cover;
   background-position: center;
