--- a/src/components/MiddleComponent/middleComponent.css
+++ b/src/components/MiddleComponent/middleComponent.css
@@ -17,7 +17,7 @@
     left: 0;
     width: 100%;
     height: 300px;
-    background-image: url('/middle.jpeg');
+    /* background-image: url('/middle.webp'); */
     background-size: cover;
     background-attachment: fixed;
     z-index: -1;
