--- a/src/components/Contacto/contacto.css
+++ b/src/components/Contacto/contacto.css
@@ -2,7 +2,7 @@
 :root {
   --primary: #ff7d00;
   --primary-dark: #e67000;
-  --forest-green: #355e3b; /* Nuevo color verde natural */
+  --forest-green: #355e3b; 
   --forest-green-dark: #1a6e1a;
   --light-bg: #f9f9f9;
   --text-dark: #333;
