--- a/src/components/PorqueElegirnos/porqueElegirnos.module.css
+++ b/src/components/PorqueElegirnos/porqueElegirnos.module.css
@@ -16,7 +16,7 @@
 
 .sectionTitle {
   text-transform: uppercase;
-  font-size: clamp(2rem, 4vw, 3rem);
+  font-size: clamp(2rem, 4vw, 2.5rem);
   font-weight: 400;
   color: var(--text-dark);
   margin-bottom: 15px;
@@ -73,6 +73,7 @@
   color: #333;
   font-size: 22px;
   font-style: italic;
+  padding-bottom: 10px;
 }
 
 .houseDescription {
@@ -161,6 +162,7 @@
   transition: background-color 0.2s ease;
 }
 
+
 .toggleButton:hover {
   background-color: var(--background-green-dark);
 }
@@ -170,10 +172,10 @@
   width: 350px !important;
 }
 
-.swiperPagination {
+/* .swiperPagination {
   width: 100vw !important;
   color: var(--background-green-dark) !important;
-}
+} */
 
 .swiperContainer {
   height: 115% !important;
@@ -181,17 +183,21 @@
   padding-right: 90px;
 }
 
+
 @media (max-width: 800px) {
+
+
   .mainContainer {
     height: auto;
-    padding: 20px 0;
     overflow-x: hidden;
+    
   }
 
   .swiperContainer {
     padding-right: 0px;
   }
 
+ 
   .modelContent {
     width: 100%;
     display: flex;
@@ -200,7 +206,9 @@
     height: 100%;
   }
   
-
+  .sectionHeader {
+    margin-bottom: 20px;
+  }
 
   .contentContainer {
     height: auto;
@@ -246,11 +254,11 @@
 
   .contentTitle {
     font-size: 18px;
-    padding-bottom: 50px
+    padding-bottom: 10px
   }
 
   .houseDescription {
-    font-size: 20px;
+    font-size: 18px;
     line-height: 140%;
   }
 }
