--- a/src/components/Proyectos/modal.css
+++ b/src/components/Proyectos/modal.css
@@ -123,7 +123,14 @@
     padding: 15px;
     padding-bottom: 5px !important;
     max-width: 95%;
+    transform: rotate(90deg)
   }
+
+  .modal-header {
+  margin-bottom: 10px;
+  padding-bottom: 5px;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+}
 
   .modal-title {
     font-size: 1.2rem;
