fix images + padings

--- a/src/components/About/aboutStyles.css
+++ b/src/components/About/aboutStyles.css
@@ -129,7 +129,7 @@
 
 @media (max-width: 768px) {
   .about-section {
-    padding: 100px 6%;
+    padding: 150px 6% 0px 6%;
     height:auto;
   }
   
