--- a/src/components/Beneficios/beneficios.css
+++ b/src/components/Beneficios/beneficios.css
@@ -14,6 +14,8 @@
   text-align: center;
   margin:auto;
   align-content:center;
+      padding-bottom: 60px;
+
 }
 
 /* Estilos para los iconos */
@@ -139,7 +141,7 @@
 @media (max-width: 768px) {
   .beneficios-section {
     height: auto;
-    padding: 110px 5%;
+    padding: 150px 5%;
     width: fit-content;
   }
 
