--- a/src/components/Proyectos/proyectos.css
+++ b/src/components/Proyectos/proyectos.css
@@ -6,7 +6,7 @@
 
 
 .section-subtitle {
-  color: #ff7d00;
+  color: white;
   font-size: 2.3rem;
   letter-spacing: 3px;
   text-transform: uppercase;
@@ -24,7 +24,6 @@
 
 .proyectos-subtitle span {
   font-weight: 600;
-  
   color: #ff7d00;
 }
 
@@ -153,12 +152,14 @@
 
 .proyecto-item:hover .overlay-content {
   transform: translateY(0);
+  
 }
 
 .proyecto-item:hover .proyecto-btn {
   opacity: 1;
   transform: translateY(0);
   border-color: #ff7d00;
+  background: #ff7b0010;
   color: #ff7d00;
 }
 
